<resources>
    <string name="app_name_icon">Meshini</string>
    <string name="app_name">MeshiniSP</string>
    <string name="action_close">close</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="get_started">Get started</string>
    <string name="email_phone_number">Email - phone number</string>
    <string name="password">Password</string>
    <string name="forget_password">forget password!</string>
    <string name="new_user_signup_now">New user! signup now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="country">Country</string>
    <string name="phone">Phone</string>
    <string name="sign_up">Sign up</string>
    <string name="activation_mail_sent_to">Activation mail sent to</string>
    <string name="resend">Resend</string>
    <string name="mobile_activation">Mobile Activation</string>
    <string name="enter_4_digit_code_sent_to">Enter 4-digit code sent to</string>
    <string name="login">Login</string>
    <string name="account_activated_successfully">Account activated successfully</string>
    <string name="tips">Tips:</string>
    <string name="tips_content">Guides offers lasts for only 5 min. then it will be declined automatically</string>
    <string name="enter_e_mail_to_reset_password">Enter E-mail to reset password</string>
    <string name="next">Next</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change password</string>
    <string name="save_changes">Save changes</string>
    <string name="credit_or_debit_cards">Credit or Debit cards</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="trip_details">Trip Details</string>
    <string name="request_submitted_successfully">Request submitted successfully</string>
    <string name="our_guides_will_send_you_offers">Our guides will send you offers</string>
    <string name="add_your_credit_or_debit_card">Add your credit or debit card</string>
    <string name="pay">Pay</string>
    <string name="your_trips">Your Trips</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="visit_many_awesome_places_in_many_countries_with_our_local_experts">We need to make the customer take the best vacation ever. Help us to do that</string>
    <string name="travel_like_a_native">Help Foreigners</string>
    <string name="make_your_request_now">Make them enjoy their vacations</string>
    <string name="request_a_guide">Request a guide</string>
    <string name="choose_country_amp_language"><![CDATA[Choose country & language]]></string>
    <string name="language">Language</string>
    <string name="car">car</string>
    <string name="bus">bus</string>
    <string name="van">van</string>
    <string name="motorbike">motorbike</string>
    <string name="on_foot">On Foot</string>
    <string name="put_your_trip_schedule">Put your trip schedule</string>
    <string name="make_your_trip_schedule">Make your trip schedule</string>
    <string name="pickup_location">Pickup location</string>
    <string name="tab_to_add_destination">Tap to add another destination</string>
    <string name="confirm_request">Confirm request</string>
    <string name="write_additional_notes">Write additional notes</string>
    <string name="type_your_message">Type your message</string>
    <string name="call_guide">Call Guide</string>
    <string name="start_chat">Start Chat</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="thank_you_for_registration"><![CDATA[Thank you for registration wait the review & activation process from our support team]]></string>
    <string name="your_request_has_been_submitted">Your request has been submitted</string>
    <string name="please_upload_your_driving_license">Please Upload your driving license</string>
    <string name="payment">Payment</string>
    <string name="offers">Offers</string>
    <string name="rate_us">Rate Us</string>
    <string name="change_language">Change Language</string>
    <string name="choose_country_city"><![CDATA[Choose country & city]]></string>
    <string name="please_select_country">please select country</string>
    <string name="date_time"><![CDATA[Date & Time:]]></string>
    <string name="search_for_requests">Start receiving requests</string>

    <string name="enter_first_name_error_message">please enter first name !!</string>
    <string name="enter_last_name_error_message">please enter last name !!</string>
    <string name="enter_mail_error_message">please enter email !!</string>
    <string name="enter_phone_error_message">please enter phone !!</string>
    <string name="invalid_mail_error_message">Invalid e_mail address !!</string>
    <string name="password_length_message_error">Password length must be more than 8 characters !!</string>
    <string name="new_password_length_message_error">new password length must be more than 8 characters !!</string>
    <string name="new_password_confirmation_length_message_error">new password confirmation length must be more than 8 characters !!</string>
    <string name="passwords_not_match_error">New password doesn\'t match new password confirmation !!</string>
    <string name="my_requests">My requests</string>
    <string name="select_city_error_message">please select city !!</string>
    <string name="enter_password_error_message">Please enter password !!</string>
    <string name="enter_new_password_error_message">Please enter new password !!</string>
    <string name="enter_new_password_confirmation_error_message">Please enter new password confirmation !!</string>
    <string name="password_not_match_message_error">Passwords are not the same !!</string>
    <string name="enter_confirm_password_error_message">Please enter confirm new password !!</string>
    <string name="enter_mail_or_phone_error_message">please enter email or phone number !!</string>
    <string name="please_choose_your_vehicle_type">Please choose your vehicle Type !!</string>
    <string name="please_upload_your_vehicle_licence">Please upload your vehicle licence !!</string>
    <string name="please_upload_your_driving_licence">Please upload your driving licence !!</string>
    <string name="please_upload_your_photo">Please Upload Your Photo !!</string>
    <string name="please_choose_languages">Please choose languages you speak !!</string>
    <string name="there_is_no_internet_connection">There is no internet connection !!</string>
    <string name="there_is_no_requests_available">"There is no Requests available !!"</string>
    <string name="error_mail_or_phone_or_password">Error e-mail or phone number or password !!</string>
    <string name="please_select_start_date">please select start date !!</string>
    <string name="please_select_end_date">please select end date !!</string>
    <string name="please_enter_offer_amount">please enter offer amount !!</string>
    <string name="offer_sent_successfully">Your offer has been sent successfully.</string>
    <string name="rating">Rating:</string>
    <string name="no_of_trips">No. of trips:</string>
    <string name="name">Name:</string>
    <string name="trip_schedule">Trip Schedule</string>
    <string name="vehicle">Vehicle:</string>
    <string name="pickup_location_tv">Pickup location:</string>
    <string name="old_password">Old Password</string>
    <string name="nothing_changed">Nothing changed !!</string>
    <string name="trip_date">Trip Date:</string>
    <string name="guide_name">Guide Name:</string>
    <string name="call_permission_denied_message">call permission denied :(</string>
    <string name="date">Date:</string>
    <string name="country_tv">Country:</string>
    <string name="offer_tv">Offer:</string>
    <string name="chat">Chat</string>
    <string name="share_your_culture">Share Your Culture</string>
    <string name="tap_card_for_more_details">Tap card for more details</string>
    <string name="your_phone">Your phone</string>
    <string name="please_upload_your_profile_picture">Please Upload your profile picture</string>
    <string name="add_another_language">Add another Language</string>
    <string name="rate">Rate :</string>
    <string name="completed_trips">Completed Trips</string>
    <string name="ok">OK</string>
    <string name="call">Call</string>
    <string name="send_offer">Send offer</string>
    <string name="requests">Requests</string>
    <string name="cash">Cash</string>
    <string name="current_trip">Current Trip</string>
    <string name="offer_sent">Offer Sent</string>
    <string name="offer_accepted">Offer Accepted</string>
    <string name="start">Start</string>
    <string name="done">Done</string>
    <string name="please_rate_the_trip">Please make rate before send review !!</string>

    <string name="destinations_list">Destinations list</string>
    <string name="write_review_optional">Write Review (optional)</string>
    <string name="send_review">Send Review</string>
    <string name="skip">Skip</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="fran_ais">français</string>
    <string name="please_upload_your_vehicle_license">Please upload your vehicle license </string>
    <string name="mohammed_saeed">Mohammed Saeed</string>
    <string name="slide_to_start_trip">Slide to start Trip</string>
    <string name="slide_to_finish_trip">Slide to finish Trip</string>
    <string name="directions">Directions</string>
    <string name="arrive_by">Arrive by</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="select_country">select country</string>
    <string name="operation_completed">Operation completed.</string>
    <string name="finish_trip">Finish</string>
    <string name="select_languages_you_speak">Select languages you speak</string>
    <string name="there_are_many_variations_of_passages_of_lorem_ipsum_available_but_the_majority_have_suffered_alteration_in_some_form_by_injected">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected</string>
    <string name="financial">Financial</string>
    <string name="no_of_complete_ntrips">No. of Complete \ntrips</string>
    <string name="total_revenue">Total revenue</string>
    <string name="meshini_fees">Meshini fees</string>
    <string name="total_profit">Total profit</string>
    <string name="app_maker_name">App Developer</string>
    <string name="view_linkein_profile">View linkedin profile</string>
</resources>
