<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<group android:id="@+id/g0"-->
        <!--android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/account"-->
            <!--android:checked="true"-->
            <!--android:actionLayout="@layout/menue_account_layout"-->
            <!--android:title=""-->
            <!--app:showAsAction="always"/>-->
    <!--</group>-->
    <group android:id="@+id/g1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/current_trip"
            android:checked="true"
            android:title="@string/current_trip" />

        <item
            android:id="@+id/your_trip"
            android:checked="true"
            android:title="@string/your_trips" />
    <!--</group>-->
    <!--<group android:id="@+id/g2"-->
        <!--android:checkableBehavior="single">-->
        <item
            android:id="@+id/payment"
            android:checked="true"
            android:title="@string/payment" />
    <!--</group>-->
    <!--<group android:id="@+id/g3"-->
        <!--android:checkableBehavior="single">-->
        <item
            android:id="@+id/help"
            android:checked="true"
            android:title="@string/help" />
    <!--</group>-->

    <!--<group android:id="@+id/g4"-->
        <!--android:checkableBehavior="single">-->
        <item
            android:id="@+id/language"
            android:checked="true"
            android:title="Arabic" />
    <!--</group>-->
    <!--<group android:id="@+id/g5"-->
        <!--android:checkableBehavior="single">-->
        <item
            android:id="@+id/rate"
            android:checked="true"
            android:title="Rate us"/>
    <!--</group>-->

    <!--<group android:id="@+id/g6"-->
        <!--android:checkableBehavior="single">-->
        <item
            android:id="@+id/logout"
            android:checked="true"
            android:title="@string/log_out"/>
    </group>
</menu>