<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activity.MainActivity"
    tools:openDrawer="left">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/container_bg">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="17.7sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp102w"
            android:background="@drawable/text_view_border"
            android:padding="8dp"
            android:text="@string/travel_like_a_native"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp24_5"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.568"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="@dimen/dp236w"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp46h"
            android:gravity="center"
            android:text="@string/visit_many_awesome_places_in_many_countries_with_our_local_experts"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp21_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp51h"
            android:text="@string/make_your_request_now"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp23_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55h"
            android:background="@drawable/dialog_top_corner"
            android:text="@string/search_for_requests"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/sp18"
            android:textAllCaps="false"
            android:backgroundTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="showDialog"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/navigation_view"
        layout="@layout/navigation_view_layout" />

    <!--<im.delight.android.webview.AdvancedWebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />-->

</androidx.drawerlayout.widget.DrawerLayout>
</layout>