<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/group_background"
        tools:context=".view.ui.activity.HomeActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dp143w"
            android:layout_height="@dimen/dp113h"
            android:layout_marginTop="@dimen/dp111h"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5h"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:layout_width="@dimen/dp130w"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp26h"
            android:text="@string/share_your_culture"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp30_5"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp55h"
            android:background="@color/sky_color"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp23_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_getStarted_arrow"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_getStarted_arrow"
            android:layout_width="@dimen/dp55w"
            android:layout_height="@dimen/dp55h"
            android:background="@color/sky_color_dark"
            android:rotation="180"
            android:src="@drawable/ic_left_arrow_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>